--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Login Form End-->
+
+  <!-- Table Template -->
+  
+  <!-- Table Template Ends -->
+
 </head>
 <body>
   <app-root></app-root>
